[package]
name = "poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
rand = "0.8.5"
eframe = "0.21.3"
env_logger = "0.10"
egui_extras = {version = "0.21.0", features = ["image"]}
image = { version = "0.24", default-feature = false, features = ["png"] }
